<resources>
    <string name="com_auth0_domain">ilmap.us.auth0.com</string>
    <string name="com_auth0_scheme">demo</string>
    <string name="com_auth0_client_id">com_auth0_client_id</string>

    <string name="app_name">IlmApp</string>
    <string name="title_home">Home</string>
    <string name="title_docs">Docs</string>
    <string name="title_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_text">Log in</string>
    <string name="action_login">Login</string>
    <string name="welcome">"Welcome Back!"</string>
    <string name="create_your_account">Create your account</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember Me?</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_with_google">Continue with Google+</string>
    <string name="logo_description">logo description</string>
    <string name="don_t_you_have_an_account">Don\'t you have an Account?</string>
    <string name="you_already_have_an_account">You already have an Account?</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="back_button">back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="upcoming_lessons">Upcoming Lessons</string>
    <string name="search">Search…</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="people_icon">People Icon</string>
    <string name="resources">resources</string>
    <string name="courses">Courses</string>
    <string name="people">people</string>
    <string name="calendar">calendar</string>
    <string name="call_chat_icon">call chat icon\n</string>
    <string name="whatsapp_icon">whatsapp icon</string>
    <string name="jenny_wilson">Jenny Wilson</string>
    <string name="sr_ui_ux_designer">Sr. UI/UX Designer</string>
    <string name="share_icon">share_icon</string>
    <string name="michoel_ecample_com">michoel@ecample.com</string>
    <string name="personal">Personal</string>
    <string name="icon">Icon</string>
    <string name="default_text">Default Text</string>
    <string name="your_profile">Your Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes">Save Changes</string>
    <string name="upload_photo">upload photo</string>
    <string name="settings">Settings</string>
    <string name="save_and_update_your_information">save and update your information</string>
</resources>