<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_fragment"
    android:paddingHorizontal="@dimen/fragment_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/app_bar_height"
    android:orientation="vertical"
    tools:context=".ui.login.RegisterFragment">

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="start"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_on_left"
        tools:src="@drawable/logo_on_left" />

    <TextView
        android:id="@+id/txt_welcome"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:fontFamily="@font/kodchasan_bold"
        android:textColor="@color/light_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_username_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomEditTextStyle"
        android:autofillHints="gul@gmail.com"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_marginTop="@dimen/space_btw_items_small"
        android:layout_marginBottom="@dimen/space_btw_items_small"/>
    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomEditTextStyle"
        android:autofillHints="gul@gmail.com"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_marginTop="@dimen/space_btw_items_small"
        android:layout_marginBottom="@dimen/space_btw_items_small"/>
    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomEditTextStyle"
        android:autofillHints="gul@gmail.com"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginTop="@dimen/space_btw_items_small"
        android:layout_marginBottom="@dimen/space_btw_items_small"/>
    <EditText
        android:id="@+id/edt_password_again"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomEditTextStyle"
        android:autofillHints="gul@gmail.com"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginTop="@dimen/space_btw_items_small"
        android:layout_marginBottom="@dimen/space_btw_items_small"/>

    <Button
        android:id="@+id/btn_register"
        style="@style/CustomButtonStyle"
        android:text="@string/action_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/space_btw_items" />
        <CheckBox
            android:height="48dp"
            android:id="@+id/chck_remember_me"
            android:text="@string/remember_me"
            android:textColor="@color/dark_green"
            android:focusedSearchResultHighlightColor="@color/dark_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />



</LinearLayout>