<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:padding="@dimen/fragment_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/app_bar_height"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="start"
        android:background="#00FFFFFF"
        android:importantForAccessibility="no"
        android:src="@drawable/logo_on_left"
        tools:src="@drawable/logo_on_left" />

    <TextView
        android:id="@+id/txt_welcome"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:fontFamily="@font/kodchasan_bold"
        android:textColor="@color/light_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomEditTextStyle"
        android:autofillHints="gul@gmail.com"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_marginTop="@dimen/space_btw_items"
        android:layout_marginBottom="@dimen/space_btw_items"/>
    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomEditTextStyle"
        android:autofillHints="gul@gmail.com"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginTop="@dimen/space_btw_items"/>

    <TextView
        android:id="@+id/btn_forgot_password"
        android:gravity="end"
        android:textColor="@color/dark_green"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_btw_items_small"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/CustomButtonStyle"
        android:text="@string/action_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/space_btw_items"
        android:layout_marginBottom="@dimen/space_btw_items"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1sp"
        tools:ignore="SmallSp"
        android:layout_marginTop="@dimen/space_btw_items_small"/>

    <TextView
        android:id="@+id/txt_useGoogle"
        android:gravity="center"
        android:textSize="@dimen/font_size_lg"
        android:textColor="@color/dark_green"
        android:text="@string/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_btw_items_small"
        android:layout_marginBottom="@dimen/space_btw_items_small"/>

    <Button
        android:id="@+id/btn_enter_with_google"
        style="@style/GoogleButtonStyle"
        android:layout_gravity="center"
        android:text="@string/continue_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_btw_items_small"
        android:layout_marginBottom="@dimen/space_btw_items_small"
        />

</LinearLayout>