<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/auth_graph">

    <navigation android:id="@+id/auth_graph"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="com.example.ilmapp.ui.login.LoginFragment"
            android:label="fragment_login"
            tools:layout="@layout/fragment_login" >
            <action
                android:id="@+id/action_loginFragment_to_registerFragment"
                app:destination="@id/registerFragment" />

        </fragment>
        <fragment
            android:id="@+id/registerFragment"
            android:name="com.example.ilmapp.ui.login.RegisterFragment"
            android:label="fragment_register"
            tools:layout="@layout/fragment_register" >
            <action
                android:id="@+id/action_registerFragment_to_loginFragment"
                app:destination="@id/loginFragment" />
            <action
                android:id="@+id/action_registerFragment_home"
                app:destination="@id/home_graph" />
        </fragment>

    </navigation>

    <navigation android:id="@+id/home_graph"
        app:startDestination="@id/navigation_home">
        <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.ilmapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_navigation_home_to_navigation_dashboard"
                app:destination="@id/navigation_docs" />
        </fragment>
        <fragment
            android:id="@+id/navigation_docs"
            android:name="com.example.ilmapp.ui.docs.DocsFragment"
            android:label="@string/title_docs"
            tools:layout="@layout/fragment_docs">
            <action
                android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
                app:destination="@id/navigation_profile" />
        </fragment>
        <fragment
            android:id="@+id/navigation_profile"
            android:name="com.example.ilmapp.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile" />
    </navigation>

</navigation>