<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/dark_green"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/size_lg"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/app_bar_heightx2"
            android:layout_weight="1"
            android:text="@string/your_profile"
            android:fontFamily="@font/kodchasan_bold"
            android:textSize="@dimen/size_lg"
            android:gravity="bottom|start"
            android:paddingStart="@dimen/size_lg"
            tools:ignore="RtlSymmetry,SpUsage" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:importantForAccessibility="no"
            android:paddingBottom="@dimen/size_sm"
            android:scaleType="fitEnd"
            android:src="@drawable/setting_icon" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_white_background"
            android:orientation="vertical"
            android:gravity="center"
            android:elevation="4dp"
            android:padding="16dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_photo"
                app:civ_border_color="@color/purple"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/jenny_wilson"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/dark_green" />

            <TextView
                android:id="@+id/profile_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sr_ui_ux_designer"
                android:textSize="14sp"
                android:textColor="@color/dark_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/lvProfileItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/vintage"
                android:dividerHeight="1dp"
                android:padding="16dp" />
        </LinearLayout>


    </LinearLayout>

    </LinearLayout>
