<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="180dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:padding="@dimen/default_padding">


        <TextView
            android:id="@+id/tvLessonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:ellipsize="end"
            android:fontFamily="@font/kodchasan_regular"
            android:maxLines="2"
            android:text="@string/welcome"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/font_size_lg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"
            app:dividerColor="@color/grey"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/llTimeSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/llPeopleSection"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivClockIcon"
                android:layout_width="@dimen/icon_size_sm"
                android:layout_height="@dimen/icon_size_sm"
                android:contentDescription="@string/clock_icon"
                android:src="@drawable/clock_icon" />

            <TextView
                android:id="@+id/tvLessonTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/kodchasan_regular"
                android:text="12:45"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/font_size_sm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPeopleSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ivPeopleIcon"
                android:layout_width="@dimen/icon_size_sm"
                android:layout_height="@dimen/icon_size_sm"
                android:contentDescription="@string/people_icon"
                android:src="@drawable/student_icon" />

            <TextView
                android:id="@+id/tvLessonPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/kodchasan_regular"
                android:text="16 Kişi"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/font_size_sm" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
